update build file

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,9 +8,14 @@ steps:
   id: Deploy To Test
   entrypoint: bash
   args: [ '-c', 'gsutil -m rsync -d -r ./dags gs://${_COMPOSER_BUCKET}/data/test']
-- name: gcr.io/cloud-builders/gcloud
+#- name: gcr.io/cloud-builders/gcloud
+#  id: Test DAGs
+#  entrypoint: gcloud
+#  args: ['composer environments', 'run', 'my-environment', '--location', 'us-central1', 'dags list', '--', '--subdir', '/home/airflow/gcs/data/test']
+- name: gcr.io/google.com/cloudsdktool/cloud-sdk
   id: Test DAGs
-  args: ['composer environments run', 'my-environment', '--location', 'us-central1', 'dags list', '--', '--subdir', '/home/airflow/gcs/data/test']
+  entrypoint: bash
+  args: [ '-c', 'gcloud composer environments run my-environment --location us-central1 dags list -- --subdir /home/airflow/gcs/data/test/']
 - name: gcr.io/google.com/cloudsdktool/cloud-sdk
   id: Deploy DAGs
   entrypoint: bash
