--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,12 +21,18 @@ steps:
 #  entrypoint: bash
 #  args: ['dags/tests/dag_parsing_test.sh', '${_COMPOSER_ENVIRONMENT}', '${_COMPOSER_REGION}']
 - name: gcr.io/google.com/cloudsdktool/cloud-sdk
-  id: Check DAG Parsing Errors
+  id: List Dags
   entrypoint: bash
   args:
   - '-c'
   - |-
     gcloud composer environments run my-environment --quiet --location us-central1 dags list -- --subdir /home/airflow/gcs/data/test/ > output.txt
+- name: gcr.io/google.com/cloudsdktool/cloud-sdk
+  id: Check DAG Parsing Errors
+  entrypoint: bash
+  args:
+  - '-c'
+  - |-
     while read line; do
       if grep -q "Error" <<< "$line"; then
           gcloud composer environments run my-environment --quiet --location us-central1 dags list-import-errors -- --subdir /home/airflow/gcs/data/test/
