--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -34,9 +34,9 @@ steps:
   - '-c'
   - |-
     while read line; do
+      echo $line
       if grep -q "Error" <<< "$line"; then
-          gcloud composer environments run my-environment --quiet --location us-central1 dags list-import-errors -- --subdir /home/airflow/gcs/data/test/
-          exit 1
+          echo $line
       fi
     done < output.txt
 - name: gcr.io/google.com/cloudsdktool/cloud-sdk
