--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,10 +12,10 @@ steps:
 #  id: Test DAGs
 #  entrypoint: gcloud
 #  args: ['composer environments', 'run', 'my-environment', '--location', 'us-central1', 'dags list', '--', '--subdir', '/home/airflow/gcs/data/test']
-- name: gcr.io/google.com/cloudsdktool/cloud-sdk
-  id: Check DAG Parsing Errors
-  entrypoint: bash
-  args: [ '-c', 'gcloud composer environments run my-environment --location us-central1 dags list-import-errors -- --subdir /home/airflow/gcs/data/test/']
+#- name: gcr.io/google.com/cloudsdktool/cloud-sdk
+#  id: Check DAG Parsing Errors
+#  entrypoint: bash
+#  args: [ '-c', 'gcloud composer environments run my-environment --location us-central1 dags list-import-errors -- --subdir /home/airflow/gcs/data/test/']
 #- name: gcr.io/cloud-builders/gcloud
 #  id: Check DAG Parsing Errors
 #  entrypoint: bash
@@ -24,6 +24,25 @@ steps:
 #  id: Check DAG Parsing Errors
 #  entrypoint: bash
 #  args: [-c, 'python3 dags/tests/dag_parsing_test.py']
+- name: gcr.io/google.com/cloudsdktool/cloud-sdk
+  id: List Dags
+  entrypoint: bash
+  args:
+  - '-c'
+  - |-
+    gcloud composer environments run my-environment --quiet --location us-central1 dags list-import-errors -- --subdir /home/airflow/gcs/data/test/ > output.txt
+- name: gcr.io/google.com/cloudsdktool/cloud-sdk
+  id: Check DAG Parsing Errors
+  entrypoint: bash
+  args:
+  - '-c'
+  - |-
+    while read line; do
+      echo $line
+      if grep -q "Error" <<< "$line"; then
+          echo $line
+      fi
+    done < output.txt
 - name: gcr.io/google.com/cloudsdktool/cloud-sdk
   id: Deploy DAGs
   entrypoint: bash
